@@ -1,3 +1,5 @@
+# Just to pass CRAN's timing constraints for 'R CMD check'
+PSCBS:::.prememoize()
 verbose <- Arguments$getVerbose(-10*interactive(), timestamp=TRUE)
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
